medialist items were not showing properly in serch page,fixed: made media-list-menu z-index:999

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -61,6 +61,7 @@ button:active {
 
 /* media lists menu*/
 .media-list-menu {
+  z-index: 999;
   padding: 0;
 }
 
